# eth-compress-py

./: .gitignore  .pre-commit-config.yaml  LICENSE-MIT  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
src/compressions/: calldata.py  fastlz.py  jit.py  utils.py
src/ethcompress/: __init__.py  compressor.py  jit.py  libzip.py  middleware.py
tests/: conftest.py  evm_helpers.py  test_cd_roundtrip.py  test_execute_provider.py  test_flz_roundtrip.py  test_jit.py  test_middleware.py  test_middleware_async.py  test_roundtrip_evm.py  test_selection.py
tests/integration/: addresses_data.py  helpers.py  test_balances.py  test_metadata.py  test_symbols.py
